Imported from resin-4.0.16-src.tar.gz.